# agentic-market-predictor

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ruff.yml  test.yml
tests/: test_sample.py
